# Errday

./: .gitignore  BUNDLE.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  contributing.md  package-lock.json  package.json  tailwind.config.js  tailwind.css
.agents/workflows/: system-prompt.md
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/: main.css  tailwind.css
dev_scripts/: get_colors.py
docs/: Release_Notes_Template.md  about.md  bugs_and_issues.md  compiler_errors.md  deployment_readiness.md  prd.md  product_requirements.md  vulnerabilities.md
docs/releases/: v1.2.4.md  v1.2.7.md
src/: main.rs  models.rs  routes.rs  store.rs
src/components/: layout.rs  mod.rs  sidebar.rs
src/views/: calendar.rs  credits.rs  inbox.rs  matrix.rs  mod.rs  tutorial.rs
